tests/fixtures/effect-compiler/errors/EFX3302-1.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      properties:
        test: {}
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
